<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInput">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupCourse"
        app:layout_constraintStart_toStartOf="@+id/radioGroupCourse"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCourse" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text1"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupCourse"
        app:layout_constraintStart_toStartOf="@+id/radioGroupCourse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text2"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupFaculty"
        app:layout_constraintStart_toStartOf="@+id/radioGroupFaculty"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupCourse"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/c_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/с_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/с_3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/с_4" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupFaculty"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/f_fict" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/f_fpm" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/f_ipsa" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/f_faks" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/open"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupFaculty"
        app:layout_constraintStart_toStartOf="@+id/radioGroupFaculty"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupFaculty" />
</androidx.constraintlayout.widget.ConstraintLayout>